--- a/product/product-details.html
+++ b/product/product-details.html
@@ -334,5 +334,6 @@
 
       document.addEventListener("DOMContentLoaded", loadProduct);
     </script>
+    <script src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
   </body>
 </html>
