--- a/product/product.html
+++ b/product/product.html
@@ -22,7 +22,7 @@
           <div class="hidden md:flex flex-1 justify-center">
             <div class="flex space-x-6">
               <a class="text-gray-700 transition-colors duration-300 transform dark:text-gray-200 hover:text-blue-500 dark:hover:text-blue-400" href="/">Home</a>
-              <a class="text-gray-700 transition-colors duration-300 transform dark:text-gray-200 hover:text-blue-500 dark:hover:text-blue-400" href="/product/product.html">Shop</a>
+              <a class="text-gray-700 transition-colors duration-300 transform dark:text-gray-200 hover:text-blue-500 dark:hover:text-blue-400" href="/">Shop</a>
               <a class="text-gray-700 transition-colors duration-300 transform dark:text-gray-200 hover:text-blue-500 dark:hover:text-blue-400" href="#">Contact</a>
               <a class="text-gray-700 transition-colors duration-300 transform dark:text-gray-200 hover:text-blue-500 dark:hover:text-blue-400" href="#">About</a>
             </div>
@@ -288,5 +288,6 @@
   <script src="category-api.js"></script>
   <script src="create-product-card.js"></script>
   <script src="filters.js"></script>
+  <script src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
 </body>
 </html>
