--- a/product/product-details.html
+++ b/product/product-details.html
@@ -53,8 +53,8 @@
         <!-- Mobile Menu -->
         <div id="mobile-menu" x-cloak x-show="isOpen" class="md:hidden absolute inset-x-0 z-20 w-full px-6 py-4 bg-white dark:bg-gray-800 shadow">
           <div class="flex flex-col space-y-2">
-            <a class="py-2 text-gray-700 transition-colors duration-200 dark:text-gray-200 hover:text-blue-500 dark:hover:text-blue-400" href="#">Home</a>
-            <a class="py-2 text-gray-700 transition-colors duration-200 dark:text-gray-200 hover:text-blue-500 dark:hover:text-blue-400" href="#">Shop</a>
+            <a class="py-2 text-gray-700 transition-colors duration-200 dark:text-gray-200 hover:text-blue-500 dark:hover:text-blue-400" href="/">Home</a>
+            <a class="py-2 text-gray-700 transition-colors duration-200 dark:text-gray-200 hover:text-blue-500 dark:hover:text-blue-400" href="/product/product.html">Shop</a>
             <a class="py-2 text-gray-700 transition-colors duration-200 dark:text-gray-200 hover:text-blue-500 dark:hover:text-blue-400" href="#">Contact</a>
             <a class="py-2 text-gray-700 transition-colors duration-200 dark:text-gray-200 hover:text-blue-500 dark:hover:text-blue-400" href="#">About</a>
             <a class="py-2 flex items-center justify-start text-gray-700 transition-colors duration-200 dark:text-gray-200 hover:text-gray-600 dark:hover:text-gray-300" href="#">
