--- a/product/product-details.html
+++ b/product/product-details.html
@@ -310,7 +310,7 @@
 
           document.getElementById("product-container").innerHTML = html;
 
-          // تبديل الصور عند الضغط
+          // switch image
           const mainImage = document.getElementById("mainImage");
           const galleryItems = document.querySelectorAll("#gallery li");
           galleryItems.forEach((item) => {
