--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
           <!-- Cart Icon (right) -->
           <div class="hidden md:flex items-center">
-            <a href="#" class="relative text-gray-700 transition-colors duration-300 dark:text-gray-200 hover:text-gray-600 dark:hover:text-gray-300">
+            <a href="/cart/cart.html" class="relative text-gray-700 transition-colors duration-300 dark:text-gray-200 hover:text-gray-600 dark:hover:text-gray-300">
               <svg class="w-5 h-5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M3 3H5L5.4 5M7 13H17L21 5H5.4M7 13L5.4 5M7 13L4.70711 15.2929C4.07714 15.9229 4.52331 17 5.41421 17H17M17 17C15.8954 17 15 17.8954 15 19C15 20.1046 15.8954 21 17 21C18.1046 21 19 20.1046 19 19C19 17.8954 18.1046 17 17 17ZM9 19C9 20.1046 8.10457 21 7 21C5.89543 21 5 20.1046 5 19C5 17.8954 5.89543 17 7 17C8.10457 17 9 17.8954 9 19Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
               </svg>
@@ -60,7 +60,7 @@
             <a class="py-2 text-gray-700 transition-colors duration-200 dark:text-gray-200 hover:text-blue-500 dark:hover:text-blue-400" href="/product/product.html">Shop</a>
             <a class="py-2 text-gray-700 transition-colors duration-200 dark:text-gray-200 hover:text-blue-500 dark:hover:text-blue-400" href="#">Contact</a>
             <a class="py-2 text-gray-700 transition-colors duration-200 dark:text-gray-200 hover:text-blue-500 dark:hover:text-blue-400" href="#">About</a>
-            <a class="py-2 flex items-center justify-start text-gray-700 transition-colors duration-200 dark:text-gray-200 hover:text-gray-600 dark:hover:text-gray-300" href="#">
+            <a class="py-2 flex items-center justify-start text-gray-700 transition-colors duration-200 dark:text-gray-200 hover:text-gray-600 dark:hover:text-gray-300" href="/cart/cart.html" target="_blank">
               <svg class="w-5 h-5 mr-2" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M3 3H5L5.4 5M7 13H17L21 5H5.4M7 13L5.4 5M7 13L4.70711 15.2929C4.07714 15.9229 4.52331 17 5.41421 17H17M17 17C15.8954 17 15 17.8954 15 19C15 20.1046 15.8954 21 17 21C18.1046 21 19 20.1046 19 19C19 17.8954 18.1046 17 17 17ZM9 19C9 20.1046 8.10457 21 7 21C5.89543 21 5 20.1046 5 19C5 17.8954 5.89543 17 7 17C8.10457 17 9 17.8954 9 19Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
               </svg>
@@ -455,7 +455,7 @@
 
       <div class="flex justify-center mt-8">
         <a href="./product/product.html">
-          <button class="px-6 py-2 bg-[#2563eb] text-white rounded-full hover:bg-gray-800 transition">
+          <button class="px-6 py-2 bg-[#2563eb] text-white rounded-full px-4 py-3 text-sm font-medium text-white transition hover:scale-105 hover:bg-gray-800 transition">
             View All Products
           </button>
         </a>
@@ -560,7 +560,7 @@
                                             </svg>
                                         </span>
                                     </span>
-                                    <div class="flex items-center gap-4 pt-4 text-sm text-emerald-500">
+                                    <div class="flex items-center gap-4 pt-4 text-sm text-gray-700">
                                         <img src="https://i.pravatar.cc/40?img=11" alt="user name" title="user name" width="48" height="48" class="max-w-full rounded-full shrink-0" />
                                         <div class="flex flex-col gap-1">
                                             <span class="font-bold uppercase">Bill Gates</span>
@@ -607,7 +607,7 @@
                                             </svg>
                                         </span>
                                     </span>
-                                    <div class="flex items-center gap-4 pt-4 text-sm text-emerald-500">
+                                    <div class="flex items-center gap-4 pt-4 text-sm text-gray-700">
                                         <img src="https://i.pravatar.cc/40?img=25" alt="user name" title="user name" width="48" height="48" class="max-w-full rounded-full shrink-0" />
                                         <div class="flex flex-col gap-1">
                                             <span class="font-bold uppercase">Jane Smith</span>
@@ -654,7 +654,7 @@
                                             </svg>
                                         </span>
                                     </span>
-                                    <div class="flex items-center gap-4 pt-4 text-sm text-emerald-500">
+                                    <div class="flex items-center gap-4 pt-4 text-sm text-gray-700">
                                         <img src="https://i.pravatar.cc/40?img=7" alt="user name" title="user name" width="48" height="48" class="max-w-full rounded-full shrink-0" />
                                         <div class="flex flex-col gap-1">
                                             <span class="font-bold uppercase">Arnold Jones</span>
@@ -1039,6 +1039,9 @@
     </footer>
     <!-- End Five Columns Footer with Logo and Sub Footer -->
 
+
+    <script src="/cart/cart.js"></script>
+    <script src="/cart/create-cart-product.js"></script>
     <script src="./product/create-product-card.js"></script>
     <script src="./product/home-product.js"></script>
     
